QtGui/gen_qevent.h

typedef struct QCloseEvent QCloseEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QIconDragEvent QIconDragEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QInputMethodQueryEvent QInputMethodQueryEvent;
typedef struct QMimeData QMimeData;
typedef struct QObject QObject;
typedef struct QPoint QPoint;
typedef struct QPointF QPointF;
typedef struct QRect QRect;
typedef struct QResizeEvent QResizeEvent;
typedef struct QShowEvent QShowEvent;
typedef struct QVariant QVariant;
bool QResizeEvent_override_virtual_clone(void* self, intptr_t slot);
QResizeEvent* QResizeEvent_virtualbase_clone(const void* self);
bool QResizeEvent_override_virtual_setAccepted(void* self, intptr_t slot);
void QResizeEvent_virtualbase_setAccepted(void* self, bool accepted);
void QResizeEvent_delete(QResizeEvent* self);
QCloseEvent* QCloseEvent_new();
QCloseEvent* QCloseEvent_clone(const QCloseEvent* self);
bool QCloseEvent_override_virtual_clone(void* self, intptr_t slot);
QCloseEvent* QCloseEvent_virtualbase_clone(const void* self);
bool QCloseEvent_override_virtual_setAccepted(void* self, intptr_t slot);
void QCloseEvent_virtualbase_setAccepted(void* self, bool accepted);
void QCloseEvent_delete(QCloseEvent* self);
QIconDragEvent* QIconDragEvent_new();
QIconDragEvent* QIconDragEvent_clone(const QIconDragEvent* self);
bool QIconDragEvent_override_virtual_clone(void* self, intptr_t slot);
QIconDragEvent* QIconDragEvent_virtualbase_clone(const void* self);
bool QIconDragEvent_override_virtual_setAccepted(void* self, intptr_t slot);
void QIconDragEvent_virtualbase_setAccepted(void* self, bool accepted);
void QIconDragEvent_delete(QIconDragEvent* self);
QShowEvent* QShowEvent_new();
QShowEvent* QShowEvent_clone(const QShowEvent* self);
bool QShowEvent_override_virtual_clone(void* self, intptr_t slot);
QShowEvent* QShowEvent_virtualbase_clone(const void* self);
bool QShowEvent_override_virtual_setAccepted(void* self, intptr_t slot);
void QShowEvent_virtualbase_setAccepted(void* self, bool accepted);
void QShowEvent_delete(QShowEvent* self);
QHideEvent* QHideEvent_new();
QHideEvent* QHideEvent_clone(const QHideEvent* self);
bool QHideEvent_override_virtual_clone(void* self, intptr_t slot);
QHideEvent* QHideEvent_virtualbase_clone(const void* self);
bool QHideEvent_override_virtual_setAccepted(void* self, intptr_t slot);
void QHideEvent_virtualbase_setAccepted(void* self, bool accepted);
void QHideEvent_delete(QHideEvent* self);
QContextMenuEvent* QContextMenuEvent_new(int reason, QPoint* pos, QPoint* globalPos);
QContextMenuEvent* QContextMenuEvent_new2(int reason, QPoint* pos);
QContextMenuEvent* QContextMenuEvent_new3(int reason, QPoint* pos, QPoint* globalPos, int modifiers);
QContextMenuEvent* QContextMenuEvent_clone(const QContextMenuEvent* self);
int QContextMenuEvent_x(const QContextMenuEvent* self);
int QContextMenuEvent_y(const QContextMenuEvent* self);
int QContextMenuEvent_globalX(const QContextMenuEvent* self);
int QContextMenuEvent_globalY(const QContextMenuEvent* self);
QPoint* QContextMenuEvent_pos(const QContextMenuEvent* self);
QPoint* QContextMenuEvent_globalPos(const QContextMenuEvent* self);
int QContextMenuEvent_reason(const QContextMenuEvent* self);
bool QContextMenuEvent_override_virtual_clone(void* self, intptr_t slot);
QContextMenuEvent* QContextMenuEvent_virtualbase_clone(const void* self);
bool QContextMenuEvent_override_virtual_setTimestamp(void* self, intptr_t slot);
void QContextMenuEvent_virtualbase_setTimestamp(void* self, unsigned long long timestamp);
bool QContextMenuEvent_override_virtual_setAccepted(void* self, intptr_t slot);
void QContextMenuEvent_virtualbase_setAccepted(void* self, bool accepted);
void QContextMenuEvent_delete(QContextMenuEvent* self);
QInputMethodEvent* QInputMethodEvent_new();
QInputMethodEvent* QInputMethodEvent_new2(struct miqt_string preeditText, struct miqt_array /* of QInputMethodEvent__Attribute* */  attributes);
QInputMethodEvent* QInputMethodEvent_clone(const QInputMethodEvent* self);
void QInputMethodEvent_setCommitString(QInputMethodEvent* self, struct miqt_string commitString);
struct miqt_array /* of QInputMethodEvent__Attribute* */  QInputMethodEvent_attributes(const QInputMethodEvent* self);
struct miqt_string QInputMethodEvent_preeditString(const QInputMethodEvent* self);
struct miqt_string QInputMethodEvent_commitString(const QInputMethodEvent* self);
int QInputMethodEvent_replacementStart(const QInputMethodEvent* self);
int QInputMethodEvent_replacementLength(const QInputMethodEvent* self);
void QInputMethodEvent_setCommitString2(QInputMethodEvent* self, struct miqt_string commitString, int replaceFrom);
void QInputMethodEvent_setCommitString3(QInputMethodEvent* self, struct miqt_string commitString, int replaceFrom, int replaceLength);
bool QInputMethodEvent_override_virtual_clone(void* self, intptr_t slot);
QInputMethodEvent* QInputMethodEvent_virtualbase_clone(const void* self);
bool QInputMethodEvent_override_virtual_setAccepted(void* self, intptr_t slot);
void QInputMethodEvent_virtualbase_setAccepted(void* self, bool accepted);
void QInputMethodEvent_delete(QInputMethodEvent* self);
QInputMethodQueryEvent* QInputMethodQueryEvent_new(int queries);
QInputMethodQueryEvent* QInputMethodQueryEvent_clone(const QInputMethodQueryEvent* self);
int QInputMethodQueryEvent_queries(const QInputMethodQueryEvent* self);
void QInputMethodQueryEvent_setValue(QInputMethodQueryEvent* self, int query, QVariant* value);
QVariant* QInputMethodQueryEvent_value(const QInputMethodQueryEvent* self, int query);
bool QInputMethodQueryEvent_override_virtual_clone(void* self, intptr_t slot);
QInputMethodQueryEvent* QInputMethodQueryEvent_virtualbase_clone(const void* self);
bool QInputMethodQueryEvent_override_virtual_setAccepted(void* self, intptr_t slot);
void QInputMethodQueryEvent_virtualbase_setAccepted(void* self, bool accepted);
void QInputMethodQueryEvent_delete(QInputMethodQueryEvent* self);
QDropEvent* QDropEvent_new(QPointF* pos, int actions, QMimeData* data, int buttons, int modifiers);
QDropEvent* QDropEvent_new2(QPointF* pos, int actions, QMimeData* data, int buttons, int modifiers, int type);
QDropEvent* QDropEvent_clone(const QDropEvent* self);
QPoint* QDropEvent_pos(const QDropEvent* self);
QPointF* QDropEvent_posF(const QDropEvent* self);
int QDropEvent_mouseButtons(const QDropEvent* self);
int QDropEvent_keyboardModifiers(const QDropEvent* self);
QPointF* QDropEvent_position(const QDropEvent* self);
int QDropEvent_buttons(const QDropEvent* self);
int QDropEvent_modifiers(const QDropEvent* self);
int QDropEvent_possibleActions(const QDropEvent* self);
int QDropEvent_proposedAction(const QDropEvent* self);
void QDropEvent_acceptProposedAction(QDropEvent* self);
int QDropEvent_dropAction(const QDropEvent* self);
void QDropEvent_setDropAction(QDropEvent* self, int action);
QObject* QDropEvent_source(const QDropEvent* self);
QMimeData* QDropEvent_mimeData(const QDropEvent* self);
bool QDropEvent_override_virtual_clone(void* self, intptr_t slot);
QDropEvent* QDropEvent_virtualbase_clone(const void* self);
bool QDropEvent_override_virtual_setAccepted(void* self, intptr_t slot);
void QDropEvent_virtualbase_setAccepted(void* self, bool accepted);
void QDropEvent_delete(QDropEvent* self);
QDragMoveEvent* QDragMoveEvent_new(QPoint* pos, int actions, QMimeData* data, int buttons, int modifiers);
QDragMoveEvent* QDragMoveEvent_new2(QPoint* pos, int actions, QMimeData* data, int buttons, int modifiers, int type);
QDragMoveEvent* QDragMoveEvent_clone(const QDragMoveEvent* self);
QRect* QDragMoveEvent_answerRect(const QDragMoveEvent* self);
void QDragMoveEvent_accept(QDragMoveEvent* self);
void QDragMoveEvent_ignore(QDragMoveEvent* self);
void QDragMoveEvent_acceptWithQRect(QDragMoveEvent* self, QRect* r);
void QDragMoveEvent_ignoreWithQRect(QDragMoveEvent* self, QRect* r);