qt6/gen_qevent.nim

proc fQResizeEvent_virtualbase_clone(self: pointer, ): pointer{.importc: "QResizeEvent_virtualbase_clone".}
proc fcQResizeEvent_override_virtual_clone(self: pointer, slot: int) {.importc: "QResizeEvent_override_virtual_clone".}
proc fQResizeEvent_virtualbase_setAccepted(self: pointer, accepted: bool): void{.importc: "QResizeEvent_virtualbase_setAccepted".}
proc fcQResizeEvent_override_virtual_setAccepted(self: pointer, slot: int) {.importc: "QResizeEvent_override_virtual_setAccepted".}
proc fcQResizeEvent_delete(self: pointer) {.importc: "QResizeEvent_delete".}
proc fcQCloseEvent_new(): ptr cQCloseEvent {.importc: "QCloseEvent_new".}
proc fcQCloseEvent_clone(self: pointer, ): pointer {.importc: "QCloseEvent_clone".}
proc fQCloseEvent_virtualbase_clone(self: pointer, ): pointer{.importc: "QCloseEvent_virtualbase_clone".}
proc fcQCloseEvent_override_virtual_clone(self: pointer, slot: int) {.importc: "QCloseEvent_override_virtual_clone".}
proc fQCloseEvent_virtualbase_setAccepted(self: pointer, accepted: bool): void{.importc: "QCloseEvent_virtualbase_setAccepted".}
proc fcQCloseEvent_override_virtual_setAccepted(self: pointer, slot: int) {.importc: "QCloseEvent_override_virtual_setAccepted".}
proc fcQCloseEvent_delete(self: pointer) {.importc: "QCloseEvent_delete".}
proc fcQIconDragEvent_new(): ptr cQIconDragEvent {.importc: "QIconDragEvent_new".}
proc fcQIconDragEvent_clone(self: pointer, ): pointer {.importc: "QIconDragEvent_clone".}
proc fQIconDragEvent_virtualbase_clone(self: pointer, ): pointer{.importc: "QIconDragEvent_virtualbase_clone".}
proc fcQIconDragEvent_override_virtual_clone(self: pointer, slot: int) {.importc: "QIconDragEvent_override_virtual_clone".}
proc fQIconDragEvent_virtualbase_setAccepted(self: pointer, accepted: bool): void{.importc: "QIconDragEvent_virtualbase_setAccepted".}
proc fcQIconDragEvent_override_virtual_setAccepted(self: pointer, slot: int) {.importc: "QIconDragEvent_override_virtual_setAccepted".}
proc fcQIconDragEvent_delete(self: pointer) {.importc: "QIconDragEvent_delete".}
proc fcQShowEvent_new(): ptr cQShowEvent {.importc: "QShowEvent_new".}
proc fcQShowEvent_clone(self: pointer, ): pointer {.importc: "QShowEvent_clone".}
proc fQShowEvent_virtualbase_clone(self: pointer, ): pointer{.importc: "QShowEvent_virtualbase_clone".}
proc fcQShowEvent_override_virtual_clone(self: pointer, slot: int) {.importc: "QShowEvent_override_virtual_clone".}
proc fQShowEvent_virtualbase_setAccepted(self: pointer, accepted: bool): void{.importc: "QShowEvent_virtualbase_setAccepted".}
proc fcQShowEvent_override_virtual_setAccepted(self: pointer, slot: int) {.importc: "QShowEvent_override_virtual_setAccepted".}
proc fcQShowEvent_delete(self: pointer) {.importc: "QShowEvent_delete".}
proc fcQHideEvent_new(): ptr cQHideEvent {.importc: "QHideEvent_new".}
proc fcQHideEvent_clone(self: pointer, ): pointer {.importc: "QHideEvent_clone".}
proc fQHideEvent_virtualbase_clone(self: pointer, ): pointer{.importc: "QHideEvent_virtualbase_clone".}
proc fcQHideEvent_override_virtual_clone(self: pointer, slot: int) {.importc: "QHideEvent_override_virtual_clone".}
proc fQHideEvent_virtualbase_setAccepted(self: pointer, accepted: bool): void{.importc: "QHideEvent_virtualbase_setAccepted".}
proc fcQHideEvent_override_virtual_setAccepted(self: pointer, slot: int) {.importc: "QHideEvent_override_virtual_setAccepted".}
proc fcQHideEvent_delete(self: pointer) {.importc: "QHideEvent_delete".}
proc fcQContextMenuEvent_new(reason: cint, pos: pointer, globalPos: pointer): ptr cQContextMenuEvent {.importc: "QContextMenuEvent_new".}
proc fcQContextMenuEvent_new2(reason: cint, pos: pointer): ptr cQContextMenuEvent {.importc: "QContextMenuEvent_new2".}
proc fcQContextMenuEvent_new3(reason: cint, pos: pointer, globalPos: pointer, modifiers: cint): ptr cQContextMenuEvent {.importc: "QContextMenuEvent_new3".}
proc fcQContextMenuEvent_clone(self: pointer, ): pointer {.importc: "QContextMenuEvent_clone".}
proc fcQContextMenuEvent_x(self: pointer, ): cint {.importc: "QContextMenuEvent_x".}
proc fcQContextMenuEvent_y(self: pointer, ): cint {.importc: "QContextMenuEvent_y".}
proc fcQContextMenuEvent_globalX(self: pointer, ): cint {.importc: "QContextMenuEvent_globalX".}
proc fcQContextMenuEvent_globalY(self: pointer, ): cint {.importc: "QContextMenuEvent_globalY".}
proc fcQContextMenuEvent_pos(self: pointer, ): pointer {.importc: "QContextMenuEvent_pos".}
proc fcQContextMenuEvent_globalPos(self: pointer, ): pointer {.importc: "QContextMenuEvent_globalPos".}
proc fcQContextMenuEvent_reason(self: pointer, ): cint {.importc: "QContextMenuEvent_reason".}
proc fQContextMenuEvent_virtualbase_clone(self: pointer, ): pointer{.importc: "QContextMenuEvent_virtualbase_clone".}
proc fcQContextMenuEvent_override_virtual_clone(self: pointer, slot: int) {.importc: "QContextMenuEvent_override_virtual_clone".}
proc fQContextMenuEvent_virtualbase_setTimestamp(self: pointer, timestamp: culonglong): void{.importc: "QContextMenuEvent_virtualbase_setTimestamp".}
proc fcQContextMenuEvent_override_virtual_setTimestamp(self: pointer, slot: int) {.importc: "QContextMenuEvent_override_virtual_setTimestamp".}
proc fQContextMenuEvent_virtualbase_setAccepted(self: pointer, accepted: bool): void{.importc: "QContextMenuEvent_virtualbase_setAccepted".}
proc fcQContextMenuEvent_override_virtual_setAccepted(self: pointer, slot: int) {.importc: "QContextMenuEvent_override_virtual_setAccepted".}
proc fcQContextMenuEvent_delete(self: pointer) {.importc: "QContextMenuEvent_delete".}
proc fcQInputMethodEvent_new(): ptr cQInputMethodEvent {.importc: "QInputMethodEvent_new".}
proc fcQInputMethodEvent_new2(preeditText: struct_miqt_string, attributes: struct_miqt_array): ptr cQInputMethodEvent {.importc: "QInputMethodEvent_new2".}
proc fcQInputMethodEvent_clone(self: pointer, ): pointer {.importc: "QInputMethodEvent_clone".}
proc fcQInputMethodEvent_setCommitString(self: pointer, commitString: struct_miqt_string): void {.importc: "QInputMethodEvent_setCommitString".}
proc fcQInputMethodEvent_attributes(self: pointer, ): struct_miqt_array {.importc: "QInputMethodEvent_attributes".}
proc fcQInputMethodEvent_preeditString(self: pointer, ): struct_miqt_string {.importc: "QInputMethodEvent_preeditString".}
proc fcQInputMethodEvent_commitString(self: pointer, ): struct_miqt_string {.importc: "QInputMethodEvent_commitString".}
proc fcQInputMethodEvent_replacementStart(self: pointer, ): cint {.importc: "QInputMethodEvent_replacementStart".}
proc fcQInputMethodEvent_replacementLength(self: pointer, ): cint {.importc: "QInputMethodEvent_replacementLength".}
proc fcQInputMethodEvent_setCommitString2(self: pointer, commitString: struct_miqt_string, replaceFrom: cint): void {.importc: "QInputMethodEvent_setCommitString2".}
proc fcQInputMethodEvent_setCommitString3(self: pointer, commitString: struct_miqt_string, replaceFrom: cint, replaceLength: cint): void {.importc: "QInputMethodEvent_setCommitString3".}
proc fQInputMethodEvent_virtualbase_clone(self: pointer, ): pointer{.importc: "QInputMethodEvent_virtualbase_clone".}
proc fcQInputMethodEvent_override_virtual_clone(self: pointer, slot: int) {.importc: "QInputMethodEvent_override_virtual_clone".}
proc fQInputMethodEvent_virtualbase_setAccepted(self: pointer, accepted: bool): void{.importc: "QInputMethodEvent_virtualbase_setAccepted".}
proc fcQInputMethodEvent_override_virtual_setAccepted(self: pointer, slot: int) {.importc: "QInputMethodEvent_override_virtual_setAccepted".}
proc fcQInputMethodEvent_delete(self: pointer) {.importc: "QInputMethodEvent_delete".}
proc fcQInputMethodQueryEvent_new(queries: cint): ptr cQInputMethodQueryEvent {.importc: "QInputMethodQueryEvent_new".}
proc fcQInputMethodQueryEvent_clone(self: pointer, ): pointer {.importc: "QInputMethodQueryEvent_clone".}
proc fcQInputMethodQueryEvent_queries(self: pointer, ): cint {.importc: "QInputMethodQueryEvent_queries".}
proc fcQInputMethodQueryEvent_setValue(self: pointer, query: cint, value: pointer): void {.importc: "QInputMethodQueryEvent_setValue".}
proc fcQInputMethodQueryEvent_value(self: pointer, query: cint): pointer {.importc: "QInputMethodQueryEvent_value".}
proc fQInputMethodQueryEvent_virtualbase_clone(self: pointer, ): pointer{.importc: "QInputMethodQueryEvent_virtualbase_clone".}
proc fcQInputMethodQueryEvent_override_virtual_clone(self: pointer, slot: int) {.importc: "QInputMethodQueryEvent_override_virtual_clone".}
proc fQInputMethodQueryEvent_virtualbase_setAccepted(self: pointer, accepted: bool): void{.importc: "QInputMethodQueryEvent_virtualbase_setAccepted".}
proc fcQInputMethodQueryEvent_override_virtual_setAccepted(self: pointer, slot: int) {.importc: "QInputMethodQueryEvent_override_virtual_setAccepted".}
proc fcQInputMethodQueryEvent_delete(self: pointer) {.importc: "QInputMethodQueryEvent_delete".}
proc fcQDropEvent_new(pos: pointer, actions: cint, data: pointer, buttons: cint, modifiers: cint): ptr cQDropEvent {.importc: "QDropEvent_new".}
proc fcQDropEvent_new2(pos: pointer, actions: cint, data: pointer, buttons: cint, modifiers: cint, typeVal: cint): ptr cQDropEvent {.importc: "QDropEvent_new2".}
proc fcQDropEvent_clone(self: pointer, ): pointer {.importc: "QDropEvent_clone".}
proc fcQDropEvent_pos(self: pointer, ): pointer {.importc: "QDropEvent_pos".}
proc fcQDropEvent_posF(self: pointer, ): pointer {.importc: "QDropEvent_posF".}
proc fcQDropEvent_mouseButtons(self: pointer, ): cint {.importc: "QDropEvent_mouseButtons".}
proc fcQDropEvent_keyboardModifiers(self: pointer, ): cint {.importc: "QDropEvent_keyboardModifiers".}
proc fcQDropEvent_position(self: pointer, ): pointer {.importc: "QDropEvent_position".}
proc fcQDropEvent_buttons(self: pointer, ): cint {.importc: "QDropEvent_buttons".}
proc fcQDropEvent_modifiers(self: pointer, ): cint {.importc: "QDropEvent_modifiers".}
proc fcQDropEvent_possibleActions(self: pointer, ): cint {.importc: "QDropEvent_possibleActions".}
proc fcQDropEvent_proposedAction(self: pointer, ): cint {.importc: "QDropEvent_proposedAction".}
proc fcQDropEvent_acceptProposedAction(self: pointer, ): void {.importc: "QDropEvent_acceptProposedAction".}
proc fcQDropEvent_dropAction(self: pointer, ): cint {.importc: "QDropEvent_dropAction".}
proc fcQDropEvent_setDropAction(self: pointer, action: cint): void {.importc: "QDropEvent_setDropAction".}
proc fcQDropEvent_source(self: pointer, ): pointer {.importc: "QDropEvent_source".}
proc fcQDropEvent_mimeData(self: pointer, ): pointer {.importc: "QDropEvent_mimeData".}
proc fQDropEvent_virtualbase_clone(self: pointer, ): pointer{.importc: "QDropEvent_virtualbase_clone".}
proc fcQDropEvent_override_virtual_clone(self: pointer, slot: int) {.importc: "QDropEvent_override_virtual_clone".}
proc fQDropEvent_virtualbase_setAccepted(self: pointer, accepted: bool): void{.importc: "QDropEvent_virtualbase_setAccepted".}
proc fcQDropEvent_override_virtual_setAccepted(self: pointer, slot: int) {.importc: "QDropEvent_override_virtual_setAccepted".}
proc fcQDropEvent_delete(self: pointer) {.importc: "QDropEvent_delete".}
proc fcQDragMoveEvent_new(pos: pointer, actions: cint, data: pointer, buttons: cint, modifiers: cint): ptr cQDragMoveEvent {.importc: "QDragMoveEvent_new".}
proc fcQDragMoveEvent_new2(pos: pointer, actions: cint, data: pointer, buttons: cint, modifiers: cint, typeVal: cint): ptr cQDragMoveEvent {.importc: "QDragMoveEvent_new2".}
proc fcQDragMoveEvent_clone(self: pointer, ): pointer {.importc: "QDragMoveEvent_clone".}
proc fcQDragMoveEvent_answerRect(self: pointer, ): pointer {.importc: "QDragMoveEvent_answerRect".}
proc fcQDragMoveEvent_accept(self: pointer, ): void {.importc: "QDragMoveEvent_accept".}
proc fcQDragMoveEvent_ignore(self: pointer, ): void {.importc: "QDragMoveEvent_ignore".}
proc fcQDragMoveEvent_acceptWithQRect(self: pointer, r: pointer): void {.importc: "QDragMoveEvent_acceptWithQRect".}
proc fcQDragMoveEvent_ignoreWithQRect(self: pointer, r: pointer): void {.importc: "QDragMoveEvent_ignoreWithQRect".}
